--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 
 		</head>
 		<body><!--corpo da página -->
-			<h1>olá mundo!</h1>
+			<header>
+				<h1>olá mundo!</h1>
+			</header>
+			<div style="width: 30%; background-color: yellow; float: left">
+				<h3>Side Bar</h3>
+			</div>
+			<div style="width: 70%; background-color: green; float: left">
+				<h3>Corpo da Página</h3>
+			</div>
+			<footer style="width: 100%; background-color: blue; float: left; color: write;">
+				<h3>Rodapé da Página</h3>
+			</footer>
 		</body>
 </html>
