--- a/pag2.html
+++ b/pag2.html
@@ -2,7 +2,7 @@
 <html>
 	<head><!--cabeçalho da página -->
 			<title>
-				Introdução HTML
+				Flex Box
 			</title>
 			<meta name="Keywords" content="introdução html, css, js">
 			<meta name="author" content="Prof. Jair Ferraz">
@@ -10,17 +10,17 @@
 			<!-- tag meta viewport serve para preparar a página para responsivedade conforme tamanho da tela -->
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-			<link rel="stylesheet" href="estilo.css">
+			<link rel="stylesheet" href="estiloP2.css">
 		</head>
 		<body><!--corpo da página -->
 			<header class="topo">
-				<h1>olá mundo!</h1>
+				<h1>Flex Box</h1>
 			</header>
 			<section>
 			  <nav>
 				  <ul>
 					<li>
-						<a href="pag2.html">Flex Box</a>
+						<a href="index.html">Home</a>
 					</li>
 					<li>
 						<a href="senacrs.com.br/unidade/18" target ="_blank">SenacTech</a>
@@ -40,17 +40,17 @@
 			
 			</nav>
 			<article>
-			<h3>Aprendizagem</h3>
-			<p>
-				Caros amigos, a necessidade de renovação processual representa uma abertura para a melhoria dos modos de operação convencionais.
-			</p>
-			<p>
-				Caros amigos, a necessidade de renovação processual representa uma abertura para a melhoria dos modos de operação convencionais.		
-			</p>
-			</article>
-			</section>
-			<footer>
-			<h3>Rotapé da Apredizagem</h3>
-			</footer>
+				<h3>Ajustes de layout com flex box</h3>
+				<p>
+					Caros amigos, a necessidade de renovação processual representa uma abertura para a melhoria dos modos de operação convencionais.
+				</p>
+				<p>
+					Caros amigos, a necessidade de renovação processual representa uma abertura para a melhoria dos modos de operação convencionais.		
+				</p>
+				</article>
+				</section>
+				<footer>
+				<h3>Rotapé da Apredizagem</h3>
+				</footer>
 		</body>
 </html>
